--- a/ctf/CDDC_2021.md
+++ b/ctf/CDDC_2021.md
@@ -14,3 +14,4 @@ This was a CTF hosted by DSTA in 2021. Probably the least stable CTF infrastruct
 Had *some* fun challenges though. Here are some that I found fun.
 
 [Behind_The_Mask](./CDDC_2021/Behind_The_Mask.md)
+[Going_Active](./CDDC_2021/Going_Active.md)
