--- a/ctf/CDDC_2021.md
+++ b/ctf/CDDC_2021.md
@@ -11,7 +11,7 @@
 # CDDC 2021
 
 This was a CTF hosted by DSTA in 2021. Probably the least stable CTF infrastructure i've ever encountered.
-Had *some* fun challenges though. Here are some that I found fun.
+Had a few fun challenges though. Here are some that I found fun.
 
 [Behind_The_Mask](./CDDC_2021/Behind_The_Mask.md)
 [Going_Active](./CDDC_2021/Going_Active.md)
