--- a/ctf/CDDC_2021.md
+++ b/ctf/CDDC_2021.md
@@ -13,5 +13,6 @@
 This was a CTF hosted by DSTA in 2021. Probably the least stable CTF infrastructure i've ever encountered.
 Had a few fun challenges though. Here are some that I found fun.
 
-[Behind_The_Mask](./CDDC_2021/Behind_The_Mask.md)
-[Going_Active](./CDDC_2021/Going_Active.md)
+[Behind_The_Mask](./CDDC_2021/Behind_The_Mask.md)  
+[Going_Active](./CDDC_2021/Going_Active.md)  
+[Lets_Go_Hunting](./CDDC_2021/Lets_Go_Hunting.md)  
