--- a/ctf/CDDC_2021.md
+++ b/ctf/CDDC_2021.md
@@ -9,9 +9,16 @@
 ### root@codex # vi CDDC_2021.md
 
 # CDDC 2021
-
+  
+## Team Name:  
+### Pogtopia  
+## Final Placement:    
+### 2nd Runner up  
+  
 This was a CTF hosted by DSTA in 2021. Probably the least stable CTF infrastructure i've ever encountered.
 Had a few fun challenges though. Here are some that I found fun.
+  
+## Challenge Writeups
 
 [Behind_The_Mask](./CDDC_2021/Behind_The_Mask.md)  
 [Going_Active](./CDDC_2021/Going_Active.md)  
