--- a/ctf/CDDC_2021.md
+++ b/ctf/CDDC_2021.md
@@ -1,10 +1,4 @@
-# Welcome to my terminal window!                                                               
-###  This system is for the use of authorized users only.  Usage of   
-###  this system may be monitored and recorded by system personnel.                                                                   
-###           Other than that, feel free to look around!  
-### root@codex # ls
-### boxes code red_teaming CTF about
-### root@codex # cd ./red_teaming
+### root@codex # cd ./CDDC_2021
 [Go up 1 directory](../ctf.md)
 ### root@codex # vi CDDC_2021.md
 
