--- a/ctf/CDDC_2021.md
+++ b/ctf/CDDC_2021.md
@@ -14,6 +14,6 @@ Had a few fun challenges though. Here are some that I found fun.
   
 ## Challenge Writeups
 
-[Behind_The_Mask](./CDDC_2021/Behind_The_Mask.md)  
-[Going_Active](./CDDC_2021/Going_Active.md)  
-[Lets_Go_Hunting](./CDDC_2021/Lets_Go_Hunting.md)  
+### [Behind_The_Mask](./CDDC_2021/Behind_The_Mask.md)  
+### [Going_Active](./CDDC_2021/Going_Active.md)  
+### [Lets_Go_Hunting](./CDDC_2021/Lets_Go_Hunting.md)  
