--- a/ctf/CDDC_2021.md
+++ b/ctf/CDDC_2021.md
@@ -17,3 +17,4 @@ Had a few fun challenges though. Here are some that I found fun.
 ### [Behind_The_Mask](./CDDC_2021/Behind_The_Mask.md)  
 ### [Going_Active](./CDDC_2021/Going_Active.md)  
 ### [Lets_Go_Hunting](./CDDC_2021/Lets_Go_Hunting.md)  
+### [Linux_Rules_The_World!](./CDDC_2021/Linux_Rules_The_World.md)  
