--- a/ctf/CDDC_2021.md
+++ b/ctf/CDDC_2021.md
@@ -9,8 +9,8 @@
 ## Final Placement:    
 ### 2nd Runner up  
   
-This was a CTF hosted by DSTA in 2021. Probably the least stable CTF infrastructure i've ever encountered.
-Had a few fun challenges though. Here are some that I found fun.
+This was a CTF hosted by DSTA in 2021. Probably the least stable CTF infrastructure i've ever  
+encountered. Had a few fun challenges though. Here are some that I found fun.
   
 ## Challenge Writeups
 
