--- a/ctf/CDDC_2021.md
+++ b/ctf/CDDC_2021.md
@@ -1,20 +1,40 @@
+
 ### root@codex # cd ./CDDC_2021
+
 [Go up 1 directory](../ctf.md)
+
 ### root@codex # vi CDDC_2021.md
 
+  
+
 # CDDC 2021
-  
-## Team Name:  
-### Pogtopia  
-## Final Placement:    
-### 2nd Runner up  
-  
-This was a CTF hosted by DSTA in 2021. Probably the least stable CTF infrastructure i've ever  
-encountered. Had a few fun challenges though. Here are some that I found fun.
-  
+
+### Team Name: Pogtopia
+### Final Placement: 2nd Runner up
+
+This was a CTF hosted by DSTA in 2021. Probably the least stable CTF infrastructure I've ever
+encountered. The challenge categories in the CTF were:
+
+##### 1. Lets Go Hunting - OSINT
+##### 2. Linux Rules The World! - Linux
+##### 3. Going Active - Active reconnaissance
+##### 4. Web Takedown 1 - Web (day 1)
+##### 5. Web Takedown 2 - Web (day 2)
+##### 6. Post Mortem - Forensics
+##### 7. Break It Down - Crypto
+##### 8. Behind The Mask - Windows/Active Directory
+
+I focused mostly on the OSINT, Linux, active recon, web and Windows AD categories due to their  
+offensive nature, so the other categories may not be as well documented in this page.
+
 ## Challenge Writeups
 
-### [Behind_The_Mask](./CDDC_2021/Behind_The_Mask.md)  
-### [Going_Active](./CDDC_2021/Going_Active.md)  
-### [Lets_Go_Hunting](./CDDC_2021/Lets_Go_Hunting.md)  
-### [Linux_Rules_The_World!](./CDDC_2021/Linux_Rules_The_World.md)  
+  
+
+### [Behind_The_Mask](./CDDC_2021/Behind_The_Mask.md)
+
+### [Going_Active](./CDDC_2021/Going_Active.md)
+
+### [Lets_Go_Hunting](./CDDC_2021/Lets_Go_Hunting.md)
+
+### [Linux_Rules_The_World!](./CDDC_2021/Linux_Rules_The_World.md)
