--- a/ctf/CDDC_2021.md
+++ b/ctf/CDDC_2021.md
@@ -15,14 +15,14 @@
 This was a CTF hosted by DSTA in 2021. Probably the least stable CTF infrastructure I've ever
 encountered. The challenge categories in the CTF were:
 
-##### 1. Lets Go Hunting - OSINT
-##### 2. Linux Rules The World! - Linux
-##### 3. Going Active - Active reconnaissance
-##### 4. Web Takedown 1 - Web (day 1)
-##### 5. Web Takedown 2 - Web (day 2)
-##### 6. Post Mortem - Forensics
-##### 7. Break It Down - Crypto
-##### 8. Behind The Mask - Windows/Active Directory
+#### 1. Lets Go Hunting - OSINT
+#### 2. Linux Rules The World! - Linux
+#### 3. Going Active - Active reconnaissance
+#### 4. Web Takedown 1 - Web (day 1)
+#### 5. Web Takedown 2 - Web (day 2)
+#### 6. Post Mortem - Forensics
+#### 7. Break It Down - Crypto
+#### 8. Behind The Mask - Windows/Active Directory
 
 I focused mostly on the OSINT, Linux, active recon, web and Windows AD categories due to their  
 offensive nature, so the other categories may not be as well documented in this page.
