--- a/ctf/CDDC_2021.md
+++ b/ctf/CDDC_2021.md
@@ -12,24 +12,40 @@
 ### Team Name: Pogtopia
 ### Final Placement: 2nd Runner up
 
-This was a CTF hosted by DSTA in 2021. Probably the least stable CTF infrastructure I've ever
-encountered. The challenge categories in the CTF were:
+This was a CTF hosted by DSTA in 2021.  
+The challenge categories in the CTF were:
 
 #### 1. Lets Go Hunting - OSINT
 #### 2. Linux Rules The World! - Linux
 #### 3. Going Active - Active reconnaissance
 #### 4. Web Takedown 1 - Web (day 1)
 #### 5. Web Takedown 2 - Web (day 2)
-#### 6. Post Mortem - Forensics
-#### 7. Break It Down - Crypto
-#### 8. Behind The Mask - Windows/Active Directory
+#### 6. File it Away - Pwn
+#### 7. Post Mortem - Forensics
+#### 8. Break It Down - Crypto
+#### 9. Behind The Mask - Windows/Active Directory
 
 I focused mostly on the OSINT, Linux, active recon, web and Windows AD categories due to their  
-offensive nature, so the other categories may not be as well documented in this page.
+offensive nature, so the other categories may not be as well documented in this page.  
+  
+Probably the least stable CTF infrastructure I've ever encountered. This CTF had technical  
+difficulties from start to end, with the CTF being delayed a whole day, boxes being constantly  
+down, challenges being able to be tampered with, an unstable CTF platform and lack of  
+technical support, especially near the end. 
+  
+In the final hours of the CTF, not just the linux challenges, but the pwn, web and other linux  
+hosts were griefed and rendered unusable. While tampering with challenges is not permitted  
+according to CTF rules, there should have been a reset system for the boxes, like in other  
+CTFs.  
+  
+With that said, I enjoyed playing with the Active Directory challenges, and learnt some new  
+OSINT techniques along the way that might help with offensive operations in the future.
 
 ## Challenge Writeups
 
   
+Web Takedown 1 and File it Away will be added soon. No screenshots will be provided for  
+Web Takedown due to the target sites being offline very shortly after the CTF ended :(
 
 ### [Lets_Go_Hunting](./CDDC_2021/Lets_Go_Hunting.md)
 
@@ -37,4 +53,9 @@ offensive nature, so the other categories may not be as well documented in this 
 
 ### [Going_Active](./CDDC_2021/Going_Active.md)
 
+### Web Takedown 1 (To be added)
+
+### File It Away (To be added)
+
 ### [Behind_The_Mask](./CDDC_2021/Behind_The_Mask.md)
+  
