--- a/ctf/CDDC_2021.md
+++ b/ctf/CDDC_2021.md
@@ -43,9 +43,7 @@ OSINT techniques along the way that might help with offensive operations in the 
 
 ## Challenge Writeups
 
-  
-Web Takedown 1 and File it Away will be added soon. No screenshots will be provided for  
-Web Takedown due to the target sites being offline very shortly after the CTF ended :(
+File it Away will be added soon.
 
 ### [Lets_Go_Hunting](./CDDC_2021/Lets_Go_Hunting.md)
 
