--- a/ctf/CDDC_2021.md
+++ b/ctf/CDDC_2021.md
@@ -11,6 +11,8 @@
 
 ### Team Name: Pogtopia
 ### Final Placement: 2nd Runner up
+![pog](./pog.jpg)
+![pog](./finalscore.png)
 
 This was a CTF hosted by DSTA in 2021.  
 The challenge categories in the CTF were:
@@ -43,7 +45,8 @@ OSINT techniques along the way that might help with offensive operations in the 
 
 ## Challenge Writeups
 
-File it Away will be added soon.
+Some challenges we solved could not be properly documented due to challenge hosts being  
+taken offline shortly after the CTF ended.
 
 ### [Lets_Go_Hunting](./CDDC_2021/Lets_Go_Hunting.md)
 
@@ -51,9 +54,17 @@ File it Away will be added soon.
 
 ### [Going_Active](./CDDC_2021/Going_Active.md)
 
-### Web Takedown 1 (To be added)
-
-### File It Away (To be added)
+### [File It Away](./CDDC_2021/File_It_Away.md)
 
 ### [Behind_The_Mask](./CDDC_2021/Behind_The_Mask.md)
   
+
+## Undocumented challenges we solved
+  
+- Web Takedown 1 & 2 (all challenges)
+- File It Away (POP IT)
+  
+## Unsolved challenges
+  
+- Linux Rules The World (part 4-6)
+- File It Away (Take Control)
