--- a/ctf/CDDC_2021.md
+++ b/ctf/CDDC_2021.md
@@ -11,8 +11,8 @@
 
 ### Team Name: Pogtopia
 ### Final Placement: 2nd Runner up
-![pog](./pog.jpg)
-![pog](./finalscore.png)
+![pog](./CDDC_2021/pog.jpg)
+![pog](./CDDC_2021/finalscore.png)
 
 This was a CTF hosted by DSTA in 2021.  
 The challenge categories in the CTF were:
