--- a/ctf/CDDC_2021.md
+++ b/ctf/CDDC_2021.md
@@ -11,8 +11,8 @@
 
 ### Team Name: Pogtopia
 ### Final Placement: 2nd Runner up
-![pog](./CDDC_2021/pog.jpg)
-![pog](./CDDC_2021/finalscore.png)
+<img src="./CDDC_2021/pog.jpg" width="200">
+<img src="./CDDC_2021/finalscore.png" width="200">
 
 This was a CTF hosted by DSTA in 2021.  
 The challenge categories in the CTF were:
