--- a/ctf/CDDC_2021.md
+++ b/ctf/CDDC_2021.md
@@ -47,7 +47,7 @@ OSINT techniques along the way that might help with offensive operations in the 
 ## Challenge Writeups
 
 Some challenges we solved could not be properly documented due to challenge hosts being  
-taken offline shortly after the CTF ended.
+taken offline shortly after the CTF ended. 
 
 ### [Lets_Go_Hunting](./CDDC_2021/Lets_Go_Hunting.md)
 
@@ -59,13 +59,4 @@ taken offline shortly after the CTF ended.
 
 ### [Behind_The_Mask](./CDDC_2021/Behind_The_Mask.md)
   
-
-## Undocumented challenges we solved
-  
-- Web Takedown 1 & 2 (all challenges)
-- File It Away (POP IT)
-  
-## Unsolved challenges
-  
-- Linux Rules The World (part 4-6)
-- File It Away (Take Control)
+-- More will be added soon --
